--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 #header{
     height: 35vh;
     width: 100vw;
-    background-image: url(img/header.jpg);
+    background-image: url(header.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
